refactored ContextSpec for testing to ensure context.show is set to false so we don't get a bunch of duplicative messages from shutdownHook when running tests fixed error when running sbt test cleaned up self test for ensuring proper number of simulations are executed